[tool.poetry]
name = "visa-rescheduler"
version = "0.1.0"
description = ""
authors = ["German Casares <german.casares@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
requests = "^2.31.0"
sendgrid = "^6.10.0"
selenium-wire = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
